--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,45 +1,53 @@
-version: 2  # Version of CircleCI
+version: 2
 jobs:
   build:
+    working_directory: /app
     docker:
-      - image: python:3.8
+      - image: docker:19.03.0-ce-git
     steps:
       - checkout
-
+      - setup_remote_docker
       - run:
-        # creates a virtual environment for you project, 
-				# install dependencies in it and run tests
-          name: Run unit tests
+          name: Install dependencies
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-            pytest
-			# Creates a remote Docker environment configured to execute Docker commands.
-      - setup_remote_docker 
-       
+            apk add --no-cache \
+              py-pip=9.0.0-r1
+            pip install \
+              docker-compose==1.12.0 \
+              awscli==1.11.76
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/app.tar
       - run:
-        # installs a docker client that will be used to run the docker commands
-          name: Install Docker client
+          name: Load Docker image layer cache
           command: |
-            set -x
-            VER="17.03.0-ce"
-            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-            mv /tmp/docker/* /usr/bin
+            set +o pipefail
+            docker load -i /caches/app.tar | true
       - run:
-         # Builds a docker image to push to Docker Hub
-				 # Tag (-t) pattern is below, where CircleCI 
-				 # to get the Dockerfile from the current directory.
-         # <docker_hub_username/docker-hub-password:version>.
-          name: Build Docker image
-          command: docker build -t khabdrick/circleci-tutorial:v1 .
-
-      - run:
-        # Pushes the Docker image you created to the Docker Hub.
-        # Replace khabdrick/circleci-tutorial:v1 with the 
-				# <docker_hub_username/docker-hub-password:version> you used to build the image above
-          name: Push to Docker Hub
+          name: Build application Docker image
           command: |
-            docker login -u unsername -p password
-            docker push khabdrick/circleci-tutorial:v1
+            docker build --cache-from=app -t app .
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/app.tar app
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/app.tar
+      - run:
+          name: Run tests
+          command: |
+            docker-compose -f ./docker-compose.test.yml up
+      - deploy:
+          name: Push application Docker image
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              login="$(aws ecr get-login)"
+              ${login}
+              docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+              docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            fi
