--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build -t ubuntu-test:latest ./Dockerfile
+            docker build -t ubuntu-test:latest /app/Dockerfile
       - run:
           name: Save Docker image layer cache
           command: |
