--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /app
+    #working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
     steps:
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t app
+            docker build --cache-from=app -t app .
       - run:
           name: Save Docker image layer cache
           command: |
